[package]
name = "mleml"
version = "0.1.0"
edition = "2021"

[features]
default = ["extra"]
extra = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#json = "0.12.4"
dlopen2 = "0.6"
serde_json = "1.0"

[dependencies.dasp]
version = "0.11.0"
features = ["slice", "slice-boxed", "signal", "signal-boxed", "interpolate", "interpolate-linear"]

[dependencies.serde]
version = "1.0"
features = ["derive", "std"]

[dev-dependencies]
# cpal = "0.15"
# anyhow = "1.0"
