[package]
name = "mleml"
description = "Framework library for working with MML"
version = "0.2.0"
authors = ["imikoy"]
keywords = ["audio", "pcm"]
license = "MIT"
homepage = "https://github.com/AlsaiSamo/mleml"
repository = "https://github.com/AlsaiSamo/mleml.git"
readme = "readme.md"
edition = "2021"

[features]
default = ["extra"]
extra = []
builtin = []

[[example]]
name = "example_fm"
path = "examples/example_fm.rs"
required-features = ["builtin"]

[[example]]
name = "one_sound"
path = "examples/one_sound.rs"
required-features = ["builtin"]

[dependencies]
serde_json = "1.0"
slice-dst = "1.5"
thiserror = "1.0"

[dependencies.dasp]
version = "0.11.0"
features = ["slice", "slice-boxed", "signal", "signal-boxed", "interpolate", "interpolate-linear"]

[dependencies.serde]
version = "1.0"
features = ["derive", "std"]
